<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
    </parent>

    <groupId>no.nav.dokdistfordeling</groupId>
    <artifactId>dokdistfordeling</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>app</module>
        <module>core</module>
        <module>qdist008</module>
        <module>rdist002</module>
        <module>qdist012</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <camel.version>4.8.0</camel.version>
        <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
        <ibm.mq.client.version>9.4.0.5</ibm.mq.client.version>
        <commons-io.version>2.17.0</commons-io.version>
        <httpclient.version>4.5.14</httpclient.version>
        <google-cloud.version>26.47.0</google-cloud.version>
        <tink.version>1.15.0</tink.version>
        <tink-gcpkms.version>1.10.0</tink-gcpkms.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
        <context-propagation.version>1.1.1</context-propagation.version>
        <token-support.version>5.0.5</token-support.version>

        <dokmet-api.version>2024.09.23-13.20-d534b40</dokmet-api.version>
        <melding-virksomhet-dokdistfordeling.version>7-18c61bf</melding-virksomhet-dokdistfordeling.version>

        <!-- Test -->
        <spring-cloud-contract-wiremock.version>4.1.4</spring-cloud-contract-wiremock.version>

        <!-- Plugins -->
        <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.dokdistfordeling</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokdistfordeling</groupId>
                <artifactId>qdist008</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokdistfordeling</groupId>
                <artifactId>rdist002</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokdistfordeling</groupId>
                <artifactId>qdist012</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-spring-boot-bom</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${google-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--
            google-http-java-client runtime avhengighet.
            https://github.com/googleapis/google-http-java-client/issues/1205
            -->
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink</artifactId>
                <version>${tink.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink-gcpkms</artifactId>
                <version>${tink-gcpkms.version}</version>
            </dependency>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ibm.mq</groupId>
                <artifactId>com.ibm.mq.jakarta.client</artifactId>
                <version>${ibm.mq.client.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>context-propagation</artifactId>
                <version>${context-propagation.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.meldinger.virksomhet</groupId>
                <artifactId>melding-virksomhet-dokdistfordeling</artifactId>
                <version>${melding-virksomhet-dokdistfordeling.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokmet</groupId>
                <artifactId>api</artifactId>
                <version>${dokmet-api.version}</version>
            </dependency>
            <!-- Test -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.security</groupId>
                <artifactId>token-validation-spring-test</artifactId>
                <scope>test</scope>
                <version>${token-support.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>no.nav.meldinger.virksomhet</groupId>
            <artifactId>melding-virksomhet-dokdistfordeling</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- Test-dependencies brukt i alle modulene -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-contract-wiremock</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.activemq</groupId>
            <artifactId>artemis-jakarta-server</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${maven-toolchains-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>